{
  "version": 4,
  "terraform_version": "0.12.7",
  "serial": 10,
  "lineage": "17937c53-c7db-567c-0686-794433f33660",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "dev_private_rte",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-057080e8ab2aedd46",
            "id": "rtb-057080e8ab2aedd46",
            "owner_id": "394144716154",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "dev_private_rte1"
            },
            "vpc_id": "vpc-024dc0d012f888d11"
          },
          "depends_on": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev_igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-02a0e3baca04fc83e",
            "owner_id": "394144716154",
            "tags": {
              "Name": "dev-igw1"
            },
            "vpc_id": "vpc-024dc0d012f888d11"
          },
          "depends_on": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_public_rte",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a602fb9ef959ffc7",
            "owner_id": "394144716154",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02a0e3baca04fc83e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev_public_rte1"
            },
            "vpc_id": "vpc-024dc0d012f888d11"
          },
          "depends_on": [
            "aws_internet_gateway.dev_igw",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_pub_ass",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0032e2100e85a0a78",
            "route_table_id": "rtb-0a602fb9ef959ffc7",
            "subnet_id": "subnet-060050ce305e7aa3f"
          },
          "depends_on": [
            "aws_route_table.dev_public_rte",
            "aws_subnet.dev_pub_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c04373c1f4e8ef07",
            "route_table_id": "rtb-0a602fb9ef959ffc7",
            "subnet_id": "subnet-0648cc9f6159a9394"
          },
          "depends_on": [
            "aws_route_table.dev_public_rte",
            "aws_subnet.dev_pub_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev_pub_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:394144716154:security-group/sg-0e1cd29d2416568f2",
            "description": "used for access public instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e1cd29d2416568f2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev_pub_sg1",
            "name_prefix": null,
            "owner_id": "394144716154",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-024dc0d012f888d11"
          },
          "depends_on": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_pub_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:394144716154:subnet/subnet-060050ce305e7aa3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.124.1.0/24",
            "id": "subnet-060050ce305e7aa3f",
            "map_public_ip_on_launch": true,
            "owner_id": "394144716154",
            "tags": {
              "Name": "dev_pub_sub_1"
            },
            "vpc_id": "vpc-024dc0d012f888d11"
          },
          "depends_on": [
            "aws_vpc.dev_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:394144716154:subnet/subnet-0648cc9f6159a9394",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.124.2.0/24",
            "id": "subnet-0648cc9f6159a9394",
            "map_public_ip_on_launch": true,
            "owner_id": "394144716154",
            "tags": {
              "Name": "dev_pub_sub_2"
            },
            "vpc_id": "vpc-024dc0d012f888d11"
          },
          "depends_on": [
            "aws_vpc.dev_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:394144716154:vpc/vpc-024dc0d012f888d11",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.124.0.0/16",
            "default_network_acl_id": "acl-08bc3183e3bc9e88e",
            "default_route_table_id": "rtb-057080e8ab2aedd46",
            "default_security_group_id": "sg-0b76c59605f1c8a83",
            "dhcp_options_id": "dopt-79e60012",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-024dc0d012f888d11",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-057080e8ab2aedd46",
            "owner_id": "394144716154",
            "tags": {
              "Name": "dev_vpc1"
            }
          }
        }
      ]
    }
  ]
}